Prevent unnecessary scrollbar in metrics widget

--- a/ui/scripts/Metric/metricBox.css
+++ b/ui/scripts/Metric/metricBox.css
@@ -5,6 +5,7 @@
 	background-color: #1faeff;
 	width: 100%;
 	padding: 2px;
+	box-sizing: border-box;
 }
 
 .metricDiv {
